<resources>
    <string name="muḥarram">Muharam</string>
    <string name="safar">Safar</string>
    <string name="rabi_i">Rabi I</string>
    <string name="rabi_ii">Rabi II</string>
    <string name="jamada_i">Jamada I</string>
    <string name="jamada_ii">Jamada II</string>
    <string name="rajab">Rajab</string>
    <string name="shaban">Shaban</string>
    <string name="ramadan">Ramadan</string>
    <string name="shawal">Shawal</string>
    <string name="dhu_alqadah">Dhu Alqadah</string>
    <string name="dhu_alhijjah">Dhu Alhijjah</string>
    <string name="hijri_date_picker_done">Done</string>
    <string name="hijri_date_picker_cancel">Cancel</string>
    <string name="hijri_date_picker_year">Year</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>

</resources>
