<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ececec">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muharram"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m1TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"

                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safar"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m2TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rabi_i"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m3TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rabi_ii"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m4TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jamada_i"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m5TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jamada_ii"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m6TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rajab"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m7TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shaban"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m8TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ramadan"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m9TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shawal"
                    android:background="@drawable/hijri_date_picker_card"
                    android:id="@+id/m10TextView"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_margin="2dp"
                    android:padding="16dp"
                    android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dhu_alqadah"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m11TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dhu_alhijjah"
                android:background="@drawable/hijri_date_picker_card"
                android:id="@+id/m12TextView"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="2dp"
                android:padding="16dp"
                android:singleLine="true" />

        </TableRow>

    </TableLayout>
</LinearLayout>